--- a/Aftonbladet/aftonbladet.user.css
+++ b/Aftonbladet/aftonbladet.user.css
@@ -2,7 +2,7 @@
 @name           Aftonbladet
 @namespace      github.com/openstyles/stylus
 @version        1.0.0
-@description    -------
+@description    Cleaned+centered theme for Aftonbladet
 @author         Jimpin
 @homepageURL  https://github.com/Jimpin/Themes/
 @updateURL    https://raw.githubusercontent.com/Jimpin/Themes/master/Aftonbladet/aftonbladet.user.css
