--- a/Nyafilmer/nyafilmer.user.css
+++ b/Nyafilmer/nyafilmer.user.css
@@ -1,7 +1,7 @@
 /* ==UserStyle==
 @name         Nyafilmer
 @namespace    github.com/openstyles/stylus
-@version      1.0.1
+@version      1.0.2
 @description  Dark theme
 @author       Jimpin
 @homepageURL  https://github.com/Jimpin/Themes/
@@ -20,13 +20,31 @@ body::-webkit-scrollbar-track {
 body::-webkit-scrollbar-thumb {
 background-color: #373737;
 }
-    
+
 .c-sidebar.list-categories .tags a.active, .c-sidebar.list-categories .tags li.active a, .c-sidebar.list-categories .tags li.current-cat a {
     /* background: #101010; */
     /* box-shadow: inset 0px 2px 2px rgba(0, 0, 0, 0.05), 0px 2px 1px rgba(0, 0, 0, 0.4); */
     color: #2bc8da;
 }
+    
+.morecontent span {
+    display: contents !important;
+}
+  
+html, body, div, span, h1, h2, h3, h4, h5, h6, p, ol, ul, li, form, label, legend, caption, aside, details, figcaption, figure, footer, header, hgroup, menu, nav, section, summary {
+    color: #2bc8da !important;
+}
 
+.vjs-volume-bar.vjs-slider-horizontal .vjs-volume-level {
+    background-color: #2bc8da !important;
+    color: #2bc8da !important;
+}
+    
+.video-js .vjs-volume-level {
+    background-color: #2bc8da !important;
+    color: #2bc8da !important;
+}
+    
 .slider-content {
     margin-top: 8px !important;
     display: block;
@@ -151,6 +169,7 @@ div#header-wrapper {
     margin-right: 4px !important;
     margin-top: 12px !important;
 }
+
 .epinav > ul li:hover {
     float: left !important;
     margin-left: 5px !important;
@@ -299,11 +318,21 @@ h1.title {
     margin-top: -12px !important;
     margin-bottom: 10px !important;
 }
-
+    
+.single-content.movie .categories a {
+    margin-top: 12px !important;
+}
+    
 #content h1 {
-    font-size: 24px !important;
+    font-size: 22px !important;
+    max-width: 442px !important;
     text-align: left;
-    margin-left: 286px;
+    margin: 8px auto !important;
+}
+    
+.single-content.movie .categories {
+    display: block;
+    margin-top: 50px !important;
 }
     
 #navbar.dark-border {
@@ -371,8 +400,9 @@ html, body, div, span, applet, object, iframe, h1, h2, h3, h4, h5, h6, p, blockq
     
 .bigbg {
     display: none !important;
+    background-image: none !important;
 }
-    
+
 .movie-cast p {
     margin-bottom: 2px;
     line-height: 14px;
@@ -1216,10 +1246,6 @@ element.style {
     box-shadow: none !important;
 }
     
-.single-content.movie .excerpt {
-    color: #2bc8da !important;
-}
-    
 .footer {
     overflow: hidden;
     font-size: 13px;
@@ -1277,7 +1303,7 @@ element.style {
     border-bottom: 2px solid #000000;
     border-right: 2px solid #000000;
 }
-
+    
 .navigation.keremiya-pagenavi a, .navigation.keremiya-pagenavi span {
     margin-right: -1px;
     border: solid !important;
@@ -1681,10 +1707,11 @@ a, .movie-title a {
 }
 
 .single-content.movie .excerpt {
-    color: #2bc8da;
-    line-height: 12px;
-    /* color: #DCDCDC; */
+    color: #2bc8da !important;
+    line-height: 16px !important;
+    margin-top: -6px !important;
 }
+
 .c-sidebar.list-categories .tags a {
     width: auto;
     box-sizing: border-box;
@@ -1707,20 +1734,11 @@ a, .movie-title a {
 .single-content.movie .categories a {
     font-size: 12px;
     color: #2bc8da;
-    /* color: #DCDCDC; */
-    /* color: #ccc; */
-    /* background: #222; */
     text-decoration: none;
     display: inline-block;
     line-height: 18px;
     max-width: 100px;
     height: 18px;
-}
-
-.single-content.movie .rating-bottom {
-    background: #1d1d1d;
-    position: absolute;
-    /* color: #B2D244; */
 }
 
 .single-content.movie .rating-bottom {
@@ -2198,11 +2216,6 @@ a, .movie-title a {
 
 .single-content.movie {
     margin-top: 0px !important;
-}
-
-.single-content.movie .excerpt {
-    color: #2bc8da;
-    line-height: 12px;
 }
 
 .c-sidebar.list-categories .tags a {
