--- a/Nyafilmer/nyafilmer.user.css
+++ b/Nyafilmer/nyafilmer.user.css
@@ -1,7 +1,7 @@
 /* ==UserStyle==
 @name         Nyafilmer
 @namespace    github.com/openstyles/stylus
-@version      1.0.2
+@version      1.0.3
 @description  Dark theme
 @author       Jimpin
 @homepageURL  https://github.com/Jimpin/Themes/
@@ -20,7 +20,7 @@ body::-webkit-scrollbar-track {
 body::-webkit-scrollbar-thumb {
 background-color: #373737;
 }
-
+ 
 a.logo {
     display: inline-block;
     text-decoration: none;
@@ -378,20 +378,26 @@ h1.title {
     margin-top: -12px !important;
     margin-bottom: 10px !important;
 }
-    
+
 #content h1 {
     font-size: 22px !important;
     max-width: 442px !important;
     text-align: left;
-    margin-bottom: 20px !important;
+    margin-bottom: 0px !important;
     margin-top: 2px !important;
     margin-left: 320px !important;
 }
-  
+   
 .single-content.movie .categories {
-    display: block;
-    margin-top: 50px !important;
+    margin-top: 22px !important;
     text-align-last: auto !important;
+    margin-left: 160px !important;
+}
+    
+.single-content.movie .info-right .title {
+    margin-top: 12px !important;
+    font-size: 13px !important;
+    margin-left: -320px !important;
 }
     
 .single-content.movie .categories a {
